fix(collection) picture margin, text align, responsive block

--- a/styles/blocks/collection.css
+++ b/styles/blocks/collection.css
@@ -1,33 +1,40 @@
 .collection-main {
-    margin-bottom: 140px;
+    padding-bottom: 60px;
+
 }
 
 .collection-main__picture {
     width: 100%;
     border-radius: 8px;
     display: block;
-    margin: 7px;
+
 }
 
 
 .collection-main__item {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     border-radius: 8px;
     overflow: hidden;
 
 }
 
 
-@media screen and (max-width: 575px) {
+@media screen and (min-width: 576px) {
+    .collection-main {
+        padding-bottom: 80px;
+    }    
+    
     .collection-main__text {
         margin-top: 0px;
     }
 
     .collection-main__item {
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
-    .collection-main__picture {
-        margin: 15px;
-    }
+}
 
+@media screen and (min-width: 768px) {
+    .collection-main {
+        padding-bottom: 140px;
+    }    
 }
