--- a/styles/tools/block-text.css
+++ b/styles/tools/block-text.css
@@ -15,7 +15,6 @@
     line-height: 1.3;
     font-weight: 700;
     color: var(--dark);
-    text-align: center;
 
 }
 
@@ -30,7 +29,6 @@
     .block-text {
         font-size: 20px;
         line-height: 1.8;
-        
     }
 
     .block-text__title {
